@@ -1,5 +1,5 @@
 CHANGES to BioNetGen
-updated 1 May 2016
+updated 25 May 2016
 https://github.com/RuleWorld/bionetgen/
 
 =======
@@ -22,6 +22,7 @@ https://github.com/RuleWorld/bionetgen/
 ==== Minor changes ===
 * BioNetGen will now automatically run the generate_network command if one of simulate_pla/simulate_ode/simulate_ssa methods are called and a network wasn't loaded into the system otherwise
 * Dangling bonds graph specifications of the kind A(b!1) are no longer allowed.
+* Added support for the <big><tt>atomize</tt></big> and <big><tt>blocks</tt></big> arguments of the <big><tt>readFile</tt></big> action to the BNGConsole <big><tt>load</tt></big> command, e.g., <big><tt>load path_to_model/sbml_model.xml --atomize 1</tt></big>
 
 == BioNetGen-2.2.6-stable ==
 '''''2015 June 22'''''
